--- a/css/app.css
+++ b/css/app.css
@@ -17,13 +17,16 @@ overflow: clip;
 html, body {
 height: 100%;
 margin: 0;
+line-height: 1.7em;
 display: flex;
 flex-direction: column;
 font-family: Arial, Helvetica, sans-serif;
 background-image: url('https://knowsmore.wordpress.com/wp-content/uploads/2025/05/knowsmore-pattern.png');
 background-color: #D7F2E6;
 background-repeat: repeat;
+background-attachment: fixed;
 }
+
 :root {
 --search: 60px;
 --lgray: #d5d3d5;
@@ -133,7 +136,7 @@ filter:brightness(75%)
 
 .header {
 background-color: #333;
-padding: 16px 30px 2px 30px;
+padding: 1em 1.875em 0.125em 1.875em;
 display: flex;
 align-items: center;
 }
