--- a/css/app.css
+++ b/css/app.css
@@ -62,32 +62,32 @@ img[Attributes] {
 
 }
 
-.searchbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: white;
-    font-weight: bold;
-    width: 45em;
-    height: var(--search);
-    border-radius: 0.625em;
-    border: 0.125em solid var(--lgray);
-    border-bottom-width: 0.25em;
-    padding: 0 1em;
-    }
+.searchbar {
+  display: flex;
+  align-items: center;
+  background: white;
+  font-weight: bold;
+  width: 45em;
+  height: var(--search);
+  border-radius: 0.625em;
+  border: 0.125em solid var(--lgray);
+  border-bottom-width: 0.25em;
+  padding: 0 0.5em;
+  gap: 0.4em; /* NEW: controls spacing between icon/input/mic */
+}
 
-.searchbar>input{
-        height:var(--search);
-        margin:0;
-        padding:0 0em;
-        border:none;
-        background:none;
-        width:80%;
-        font-size:24pt;
-        color:#222;
-        font-weight:bold;
-        box-sizing: border-box;
-        }
+.searchbar > input {
+  height: var(--search);
+  margin: 0;
+  padding: 0 0.25em; /* NEW: add a tiny bit of horizontal breathing room */
+  border: none;
+  background: none;
+  width: 100%; /* allow flexible size instead of fixed 80% */
+  font-size: 24pt;
+  color: #222;
+  font-weight: bold;
+  box-sizing: border-box;
+}
 
 .searchbar>input:focus{
         border:none;
