--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ img[Attributes] {
             display: flex;
             flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('https://knowsmore.wordpress.com/wp-content/uploads/2025/05/knowsmore-pattern.png');
+    background-image: url('../images/backgroundpattern.png');
     background-color: #D7F2E6;
     background-repeat: repeat;
 }
